2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am
	(XSParagraph_la_LDFLAGS, TestXS_la_LDFLAGS): Add -no-undefined flag,
	for MS-Windows.  Report from Eli Zaretskii.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_add_text)
	(xspara__add_next): Supply third argument to mbrtowc to say how 
	many bytes are left.  Same for second argument to mbrlen.
	Suggestion from Eli Zaretskii.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Remove TEXINFO_XS=omit line.
	* tp/tests/coverage/tests-parser.txt: Skip 
	formatting_utf8_enable_encoding test.

2015-12-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Set TEXINFO_XS=omit to avoid failure
	in test_scripts/coverage_formatting_utf8_enable_encoding.sh.

2015-12-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.0.91.
	* configure.ac: versionn

2015-12-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Short Sample): Remove use of "-*-texinfo-*-"
	and "%** start of header", "%** end of header" from example.
	Change "names the file" to "names the manual" since @setfilename isn't
	here any more.
	(Short Sample Texinfo File): Same changes to complete example 
	without interleaved commentary.
	(Sample Beginning): Remove the same parts.
	(Texinfo File Header): Don't say that "-*-texinfo-*-" is 
	required.  Delete word "generally".
	(First Line): Mention optional "-*-texinfo-*-" here, for when 
	the file type isn't detected from the file extension.
	(Beginning and Ending a File): Don't say that the name of the 
	output file has to be specified in a Texinfo file.

	Suggestions from Per Bothner, Eli Zaretskii and Mathieu Lirzin.

2015-12-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Inserting Accents, Inserting Quotation Marks):
	Remove index entries for 'documentencoding'.

2015-12-26  Gavin Smith  <gavinsmith0123@gmail.com>
