@@ -1,3 +1,15 @@
+# configure.ac for XSParagraph
+#
+# Copyright 2015, 2016 Free Software Foundation, Inc.
+#
+# This file is free software; as a special exception the author gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
 AC_INIT([texinfo], [6.0])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
